# f1-ext-install

./: .gitignore  Cargo.toml  Dockerfile  README.md
.buildkite/: build.sh  pipeline.yml
src/: lib.rs  main.rs
src/dependency/: builtin.rs  mod.rs  parse.rs  pecl.rs  version.rs
src/extension/: builtin.rs  mod.rs  pecl.rs  version.rs
src/system/: alpine.rs  command.rs  mod.rs
test/: Dockerfile  builtin.sh  harness.sh  pecl.sh
tests/: builtin.rs  pecl.rs
tests/common/: mod.rs
