[package]
name = "f1-ext-install"
description = "Helper for building PHP extensions in Docker"
version = "0.1.0"
authors = ["gustavderdrache <aford@forumone.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/forumone/f1-ext-install"

[dependencies]
env_logger = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
nom = "5.0.1"
num_cpus = "1.10.1"
quick-error = "1.2.2"
structopt = "0.3.3"

[profile.release]
lto = true
